# customer-support-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  audit.py  config.py  database.py  main.py  models.py  policy.py  schemas.py  seed.py
backend/app/agent/: graph.py  llm.py  prompts.py  service.py  tools.py
backend/app/data/: refund_policy.md  seed_customers.json
backend/scripts/: reset_db.py
backend/tests/: conftest.py  test_api_smoke.py  test_policy.py
docs/: CHAT_AGENT_RESPONSE_FLOW.md  DATABASE_SCHEMA.md  RENDER_DEPLOYMENT.md  RUNNING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AdminDashboard.tsx  ChatPanel.tsx
